# simulados_web

./: .gitignore  docker-compose.yml  readme.md
backend/: Cargo.toml  Dockerfile  app.py  requirements.txt
backend/src/: cache.rs  db.rs  handlers.rs  main.rs  simulado_store.rs  watcher.rs
backend/user_data/: app.db-shm  app.db-wal
frontend/: app.js  index.html  simulado.html  style.css
frontend/js/: common.js  home.js  quiz.js
frontend/nginx/: default.conf
