[package]
name = "simulados-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28", features = ["bundled"] }
redis = { version = "0.22", features = ["tokio-comp"] }
notify = "5.0"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
env_logger = "0.9"
rand = "0.9.2"
log = "0.4.27"
